--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,8 @@ html, body {
   height: 100%;
 }
 
+:root {
+  --color-primary: #ACEB98;
+  --color-primary-hover: #98D982;
+  --color-on-primary: #ffffff;
+}
