--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 :root {
-  --color-primary: #ACEB98;
-  --color-primary-hover: #98D982;
+  --color-primary: #A4C2A8;
+  --color-primary-hover: #96B89F;
   --color-on-primary: #ffffff;
 }
